--- a/example/option.html
+++ b/example/option.html
@@ -12,7 +12,14 @@ Requires webpack-dev-server to be running
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div id="content"></div>
+    <ul class="menu">
+        <li><a href="/index.html">default</a></li>
+        <li><a href="/alternate.html">alternate</a></li>
+        <li><a href="/option.html">option</a></li>
+    </ul>
+    <div id="offers"></div>
+    <hr>
+    <div id="news"></div>
     <script src="__dist__/index.js"></script>
 </body>
 </html>
