--- a/example/alternate.html
+++ b/example/alternate.html
@@ -17,8 +17,10 @@ Requires webpack-dev-server to be running
         <li><a href="/alternate.html">alternate</a></li>
         <li><a href="/option.html">option</a></li>
     </ul>
+    <h1>Ofertas</h1>
     <div id="offers"></div>
     <hr>
+    <h1>Novedades</h1>
     <div id="news"></div>
     <script src="__dist__/index.js"></script>
 </body>
