--- a/example/alternate.html
+++ b/example/alternate.html
@@ -10,6 +10,7 @@ Requires webpack-dev-server to be running
     <title>Example</title>
     <link rel="stylesheet" href="__dist__/alternate.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <ul class="menu">
