feat(js-hover): add example js hover with jquery

--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,7 @@ Requires webpack-dev-server to be running
     <link rel="stylesheet" href="__dist__/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./common-hover.js"></script>
 </head>
 <body>
     <ul class="menu">
