refactor(example): replace hardcoded text by default props

--- a/example/index.html
+++ b/example/index.html
@@ -19,11 +19,7 @@ Requires webpack-dev-server to be running
         <li><a href="/alternate.html">alternate</a></li>
         <li><a href="/option.html">option</a></li>
     </ul>
-    <h1>Ofertas</h1>
-    <div id="offers"></div>
-    <hr>
-    <h1>Novedades</h1>
-    <div id="news"></div>
+    <div id="content"></div>
     <script src="__dist__/index.js"></script>
 </body>
 </html>
