feat(example): add BEM lint, add husky to commits, change navigation menu, add main.scss

--- a/example/index.html
+++ b/example/index.html
@@ -9,16 +9,12 @@ Requires webpack-dev-server to be running
     <meta charset="UTF-8">
     <title>Example</title>
     <link rel="stylesheet" href="__dist__/index.css" />
+    <link rel="stylesheet" href="__dist__/default.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./common-hover.js"></script>
 </head>
 <body>
-    <ul class="menu">
-        <li><a href="/index.html">default</a></li>
-        <li><a href="/alternate.html">alternate</a></li>
-        <li><a href="/option.html">option</a></li>
-    </ul>
     <div id="content"></div>
     <script src="__dist__/index.js"></script>
 </body>
